### Build 14 (until now)
- Fix bug in build13 that the editor save dialog would use the name of the list item from
  the second last (instead of the last) click. (svn:r3781)
- Added an editor tool to set a new origin in the map. This will make it possible to get
  an island properly centered, instead of divided in 4 corners when a minimap is generated
  with an external tool, such as the one used in the
  [map download section](http://wl.widelands.org/maps/). The button that enables the tool
  is in the map options dialog. (svn:r3778)
- Allow longer text for a world's name and author (to avoid having it cut off like "The
  Widelands Development Tea"). (svn:r3777)
- Do not crash when writing an empty file. (svn:r3773)
- Added a new in game song. (svn:r3758)
- Make more configuration options configurable in the options menu. (svn:r2753)
- Fix bugs in the S2 map loader. Trying to load an invalid file could cause failed
  assertions in debug builds and probably other bugs in release builds. (svn:r3750)
- Added new loading screen. (svn:r3748)
- Allow configuring which information about a building is shown in the mapview's building
  census and statistics displays and the building window title. (svn:r3741)
- Added colorized chatmessages. (svn:r3725)
- Added a lobby to multiplayer launchgame menu. Now players aren't automatically assigned
  to a position. Players staying in lobby are getting in game spectators.(svn:r3702,
  svn:r3703, svn:r3707, svn:r3709, svn:r3710)
- Improved the map Plateau so that the players can reach the center even if another player
  is fortified there. This is achieved by allowing large buildings at a few more places in
  the valleys leading from the starting positions to the center. Also add some wiese1
  (terrain type), which was not used at all on this map before. (svn:r3713)
- Added a new map "Twinkling Waves". (svn:r3689)
- Fix bug that the editor toolsize menu was not updated when the toolsize was changed with